--- a/ComedyHackDay/app/src/main/res/values/strings.xml
+++ b/ComedyHackDay/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">ComedyHackDay</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">956004047808627</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
