--- a/ComedyHackDay/app/src/main/res/values/strings.xml
+++ b/ComedyHackDay/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="give_a_fuck">All The Fucks!</string>
-    <string name="no_fucks_given">Who Gives a Fuck?</string>
+    <string name="no_fucks_given">Who Gives a Fuck‽</string>
 </resources>
